[tool.poetry]
name = "flixbus-ninja"
version = "0.1.0"
description = ""
authors = ["Ondřej Holub <example@example.com>"]
repository = "https://github.com/holuond/flixbus-ninja"

[tool.poetry.dependencies]
python = "^3.10"
dataconf = "^2.1.1"
playwright = "^1.26.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
